Add an instruction for running the program